Update code to automate drift

--- a/k8s/argo/drift-detection-sensor.yaml
+++ b/k8s/argo/drift-detection-sensor.yaml
@@ -29,3 +29,4 @@ spec:
                 value: "s3://minio/data/app/data/processed/X_train.csv"
               - name: current-data-path
                 value: "s3://minio/data/app/data/processed/X_test.csv"
+          generateName: drift-retrain-workflow-
