--- a/k8s/argo/workflow-template.yaml
+++ b/k8s/argo/workflow-template.yaml
@@ -12,68 +12,56 @@ spec:
       value: "s3://minio/data/app/data/processed"
     - name: model-dir
       value: "s3://minio/models/best_model"
-    - name: reference-data-path
-      value: "s3://minio/data/app/data/processed/X_train.csv"
-    - name: current-data-path
-      value: "s3://minio/data/app/data/processed/X_test.csv"
 
   templates:
   - name: retrain-workflow
-    steps:
-    - - name: check-drift
-        template: check-drift
-        arguments:
-          parameters:
-          - name: reference-data-path
-            value: "{{workflow.parameters.reference-data-path}}"
-          - name: current-data-path
-            value: "{{workflow.parameters.current-data-path}}"
-    - - name: retrain-model
-        template: retrain-model
-        when: "{{steps.check-drift.outputs.result}} == true"
-
-  - name: check-drift
     inputs:
       parameters:
-      - name: reference-data-path
-      - name: current-data-path
-    script:
-      image: python:3.9-slim
-      command: [python]
-      source: |
-        import os
-        import pandas as pd
-        from evidently.report import Report
-        from evidently.metric_preset import DataDriftPreset
-
-        # Load reference and current datasets
-        reference_data = pd.read_csv("{{inputs.parameters.reference-data-path}}")
-        current_data = pd.read_csv("{{inputs.parameters.current-data-path}}")
-
-        # Generate drift report
-        report = Report(metrics=[DataDriftPreset()])
-        report.run(reference_data=reference_data, current_data=current_data)
-
-        # Compute drift share
-        drift_share = report.as_dict()["metrics"][0]["result"]["drift_share"]
-        print(f"Drift Share: {drift_share}")
-
-        # Save the report locally
-        os.makedirs("reports", exist_ok=True)
-        report.save_html("reports/drift_report.html")
-        print("Drift report saved to reports/drift_report.html")
-
-        # Return true if drift exceeds threshold
-        exit(0) if drift_share > 0.5 else exit(1)
-    outputs:
-      result:
-        exitCode: true
+      - name: data-dir
+      - name: model-dir
+    steps:
+    - - name: retrain-model
+        template: retrain-model
+        arguments:
+          parameters:
+          - name: data-dir
+            value: "{{inputs.parameters.data-dir}}"
+          - name: model-dir
+            value: "{{inputs.parameters.model-dir}}"
+    - - name: notify-reload
+        template: notify-reload
 
   - name: retrain-model
-    script:
-      image: measureapp/ml_job:0.0.6
+    inputs:
+      parameters:
+      - name: data-dir
+      - name: model-dir
+    container:
+      image: measureapp/ml_job:0.0.13
+      imagePullPolicy: Always
       command: ["/bin/bash", "-c"]
-      source: |
-        python /app/scripts/run_data_preparation.py --data-path /app/data/raw/telco_churn.csv --config-path /app/config/process.yaml --output-dir /app/data/processed &&
-        python /app/scripts/model_training.py &&
-        python /app/scripts/evaluate_model.py
+      args:
+        - |
+          python /app/scripts/retrain_model.py
+      env:
+      - name: MINIO_URL
+        value: "http://minio-service.minio.svc.cluster.local:9000"
+      - name: AWS_ACCESS_KEY_ID
+        value: "uaTJ6O0revHeQi0hcuXk"
+      - name: AWS_SECRET_ACCESS_KEY
+        value: "9PG7MDJrawCJ4MLdXYZdDbKNxZXoqwtpNhCfAkP3"
+      imagePullSecrets:
+      - name: docker-registry-creds
+
+  - name: notify-reload
+    http:
+      url: "http://fastapi-service-url/reload-model"
+      method: POST
+      headers:
+        - name: Content-Type
+          value: application/json
+      body: |
+        {
+          "message": "Reload model after retrain",
+          "timestamp": "{{workflow.creationTimestamp}}"
+        }
