--- a/k8s/drift/drift-job.yaml
+++ b/k8s/drift/drift-job.yaml
@@ -4,7 +4,7 @@ metadata:
   name: drift-detection-job
   namespace: mlflow
 spec:
-  schedule: "*/1 * * * *"  # Every 10 minutes
+  schedule: "*/10 * * * *"  # Every 10 minutes
   jobTemplate:
     spec:
       template:
@@ -23,5 +23,6 @@ spec:
             - name: AWS_SECRET_ACCESS_KEY
               value: "9PG7MDJrawCJ4MLdXYZdDbKNxZXoqwtpNhCfAkP3"
             - name: WEBHOOK_URL
-              value: "http://argo-events-service.argo-events.svc.cluster.local:12000/drift-detected"
+              value: "http://drift-detection-eventsource-svc.argo-events.svc.cluster.local:12000/drift-detected"
+              
           restartPolicy: OnFailure
