--- a/requirements/requirements.app.txt
+++ b/requirements/requirements.app.txt
@@ -7,3 +7,27 @@ pandas==1.5.2
 scikit-learn==1.2.0
 xgboost
 evidently
+prometheus-client==0.16.0
+
+
+
+# # Core FastAPI server
+# uvicorn[standard]==0.23.0
+# fastapi==0.103.0
+
+# # Machine learning and data processing
+# numpy==1.23.5
+# pandas==1.5.2
+# scikit-learn==1.2.0
+# xgboost==1.7.0
+# joblib==1.2.0
+
+# # Evidently for drift detection
+# evidently==0.3.1
+
+# # AWS SDK for S3 interaction
+# boto3==1.28.0
+# botocore==1.31.0
+
+# # Prometheus for monitoring and metrics
+# prometheus-client==0.16.0
